--- a/day02/day2.ipynb
+++ b/day02/day2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4595e23d-2e31-44e6-9acb-7f1d9dcc4896",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
     "rectangle_area = width * length\n",
     "rectangle_circumference = (width * 2) + (length * 2)\n",
     "\n",
-    "circle_area = math.pi * (radius**2)\n",
+    "circle_area = (math.pi) * (radius**2)\n",
     "circel_circumference = 2 * (math.pi) * radius\n",
     "\n",
     "print(\"Rectangle area:\", rectangle_area)\n",
