--- a/day03/dilution_calculation.ipynb
+++ b/day03/dilution_calculation.ipynb
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
     "for v in v_values:\n",
     "    a = (v-v0)/delta_t\n",
     "    a_values.append(a)\n",
-    "    print (f\"when the car reached {v} m/s, its accelaration as {a:.2f} m/s²\")"
+    "    print (f\"when the car reached {v} m/s, its accelaration was {a:.2f} m/s²\")"
    ]
   }
  ],
