--- a/day03/day3.ipynb
+++ b/day03/day3.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Rectangle area: 20\n",
-      "Rectangle circumference: 18\n",
-      "Circle area: 113.09733552923255\n",
-      "Circle circumference: 37.69911184307752\n"
+      "Rectangle area: 2.0\n",
+      "Rectangle circumference: 6.0\n",
+      "Circle area: 28.274333882308138\n",
+      "Circle circumference: 18.84955592153876\n"
      ]
     }
    ],
    "source": [
     "import math\n",
     "\n",
-    "width = int(input(\"Enter rectangle width: \"))    \n",
-    "length = int(input(\"Enter rectangle length: \"))     \n",
+    "width = float(input(\"Enter rectangle width: \"))    \n",
+    "length = float(input(\"Enter rectangle length: \"))     \n",
     "\n",
-    "radius = int(input(\"Enter rectangle radius: \"))   \n",
+    "radius = float(input(\"Enter rectangle radius: \"))   \n",
     "\n",
     "rectangle_area = width * length\n",
     "rectangle_circumference = (width * 2) + (length * 2)\n",
