--- a/day04/day04 lesson/Untitled.ipynb
+++ b/day04/day04 lesson/Untitled.ipynb
@@ -128,12 +128,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9028843d-07c5-488d-8116-1aaab8f6d2b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: numpy in c:\\users\\agers\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.1.3)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Ignoring invalid distribution ~upyterlab (C:\\Users\\agers\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~upyterlab (C:\\Users\\agers\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages)\n",
+      "WARNING: Ignoring invalid distribution ~upyterlab (C:\\Users\\agers\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages)\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 24.3.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
-    "add"
+    "!pip install numpy"
    ]
   }
  ],
