add substraction questions

--- a/day04/assignment-t-test.ipynb
+++ b/day04/assignment-t-test.ipynb
@@ -205,6 +205,53 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer the following five substraction questions\n",
+      "question 1: 41 - 35 = ?\n",
+      "You are correct!\n",
+      "question 2: 13 - 39 = ?\n",
+      "You are correct!\n",
+      "question 3: 29 - 21 = ?\n",
+      "You are wrong!\n",
+      "question 4: 22 - 1 = ?\n",
+      "You are correct!\n",
+      "question 5: 21 - 28 = ?\n",
+      "You are correct!\n",
+      "You scored: 4/5!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "print(\"Answer the following five substraction questions\")\n",
+    "\n",
+    "score = 0\n",
+    "\n",
+    "for question in range(1,6):\n",
+    "    number1 = random.randrange(1,50) \n",
+    "    number2 = random.randrange(1,50)\n",
+    "\n",
+    "    print(f\"question {question}: {number1} - {number2} = ?\")\n",
+    "    calc = number1 - number2\n",
+    "    answer = int(input(\"The answer is:\"))\n",
+    "    if answer == calc: \n",
+    "        print(\"You are correct!\")\n",
+    "        score += 1\n",
+    "    if answer != calc:\n",
+    "        print (\"You are wrong!\")\n",
+    "        \n",
+    "print(f\"You scored: {score}/5!\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
