--- a/day05/Datasets.ipynb
+++ b/day05/Datasets.ipynb
@@ -51,23 +51,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "5-RdKFOuVB5b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   PatientID  Age Sex  Condition  WBC_Count\n",
+      "0          1   25   M    Healthy       5600\n",
+      "1          2   40   F  Infection      11000\n",
+      "2          3   35   F    Healthy       6700\n",
+      "3          4   50   M     Cancer       8700\n",
+      "4          5   60   M  Infection      13400\n",
+      "The number of patients is: 10\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Load the dataset\n",
     "\n",
-    "data = # TODO: Read 'patient_data.csv' into a pandas DataFrame called 'data'\n",
+    "data = pd.read_csv(\"patient_data.csv\")\n",
+    "\n",
     "# Display the first 5 rows of the dataset\n",
     "\n",
-    "# TODO: Use a method to display the first 5 rows of 'data'\n",
+    "print(data.head())\n",
     "\n",
     "# Count the number of patients\n",
-    "# TODO: Use a function to get the number of rows in 'data' and print it\n"
+    "\n",
+    "no_of_patients = len(data)\n",
+    "\n",
+    "# Use a function to get the number of rows in 'data' and print it\n",
+    "\n",
+    "print(f\"The number of patients is: {no_of_patients}\")\n"
    ]
   },
   {
@@ -100,28 +120,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "yJghPmxsVB5c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Mean WBC count: 8710.0\n",
+      "Minimum WBC count: 5400\n",
+      "Maximum WBC count: 13400\n",
+      "\n",
+      "Number of unique conditions: 3\n"
+     ]
+    }
+   ],
    "source": [
     "# Calculate basic statistics\n",
-    "# TODO: Compute the mean WBC count and store it in 'mean_wbc'\n",
-    "mean_wbc =\n",
+    "# Compute the mean WBC count and store it in 'mean_wbc'\n",
+    "mean_wbc = data['WBC_Count'].mean()\n",
     "\n",
-    "# TODO: Compute the minimum WBC count and store it in 'min_wbc'\n",
-    "min_wbc =\n",
+    "# Compute the minimum WBC count and store it in 'min_wbc'\n",
+    "min_wbc = data['WBC_Count'].min()\n",
     "\n",
-    "# TODO: Compute the maximum WBC count and store it in 'max_wbc'\n",
-    "max_wbc =\n",
+    "# Compute the maximum WBC count and store it in 'max_wbc'\n",
+    "max_wbc = data['WBC_Count'].max()\n",
     "\n",
     "print(f\"\\nMean WBC count: {mean_wbc}\")\n",
     "print(f\"Minimum WBC count: {min_wbc}\")\n",
     "print(f\"Maximum WBC count: {max_wbc}\")\n",
     "\n",
     "# Count unique conditions\n",
-    "unique_conditions = # TODO: Find the number of unique conditions and store it in 'unique_conditions'\n",
+    "unique_conditions = data['Condition'].nunique()  # Find the number of unique conditions and store it in 'unique_conditions'\n",
     "print(f\"\\nNumber of unique conditions: {unique_conditions}\")\n"
    ]
   },
@@ -250,7 +283,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -264,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
