--- a/day05/Datasets.ipynb
+++ b/day05/Datasets.ipynb
@@ -186,21 +186,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "nY7IFv_0VB5d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Patients with WBC count above 10,000: \n",
+      "   PatientID  Age Sex  Condition  WBC_Count\n",
+      "1          2   40   F  Infection      11000\n",
+      "4          5   60   M  Infection      13400\n",
+      "7          8   45   F  Infection      12500\n",
+      "\n",
+      "Patients with the condition 'Healthy':\n",
+      "   PatientID  Age Sex Condition  WBC_Count\n",
+      "0          1   25   M   Healthy       5600\n",
+      "2          3   35   F   Healthy       6700\n",
+      "5          6   30   F   Healthy       5900\n",
+      "8          9   20   F   Healthy       5400\n"
+     ]
+    }
+   ],
    "source": [
     "# Filter patients with WBC count > 10,000\n",
-    "# TODO: Create a DataFrame 'high_wbc' containing patients with WBC_Count > 10000\n",
-    "high_wbc =\n",
-    "print(\"\\nPatients with WBC count above 10,000:\")\n",
+    "# Create a DataFrame 'high_wbc' containing patients with WBC_Count > 10000\n",
+    "high_wbc = data[data['WBC_Count'] > 10000]\n",
+    "print(\"\\nPatients with WBC count above 10,000: \")\n",
     "print(high_wbc)\n",
     "\n",
     "# Filter patients with the condition 'Healthy'\n",
-    "# TODO: Create a DataFrame 'healthy_patients' containing patients with Condition == 'Healthy'\n",
-    "healthy_patients =\n",
+    "# Create a DataFrame 'healthy_patients' containing patients with Condition == 'Healthy'\n",
+    "healthy_patients = data[data['Condition'] == \"Healthy\"]\n",
     "print(\"\\nPatients with the condition 'Healthy':\")\n",
     "print(healthy_patients)\n"
    ]
