--- a/day06/Assignment06.ipynb
+++ b/day06/Assignment06.ipynb
@@ -120,9 +120,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BRCA1: 3\n",
+      "PTEN: 1\n",
+      "EGFR: 3\n",
+      "FOXP3: not found\n",
+      "FOXP3: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# List of specific genes to check\n",
     "genes_to_check = [\"BRCA1\", \"PTEN\", \"EGFR\", \"FOXP3\"]\n",
@@ -130,11 +142,11 @@
     "# Loop through specific genes to check their presence in the gene count dictionary\n",
     "for gene in genes_to_check:\n",
     "    if gene in gene_counts:\n",
-    "        # TODO: Print the gene and its count if found\n",
+    "        print(f\"{gene}: {gene_counts[gene]}\") # Print the gene and its count if found\n",
     "          \n",
     "    else:\n",
-    "    # TODO: Print the gene and \"not found\" if not present\n",
-    "    # TODO: Use .get() method to print the count safely with a default value of 0\n"
+    "        print(f\"{gene}: not found\") # Print the gene and \"not found\" if not present\n",
+    "        print(f\"{gene}: {gene_counts.get(gene, 0)}\") #: Use .get() method to print the count safely with a default value of 0\n"
    ]
   },
   {
