--- a/day06/Assignment06.ipynb
+++ b/day06/Assignment06.ipynb
@@ -163,19 +163,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_genes = [] #TODO: ADdd 4 new genes\n"
+    "new_genes = [\"MYOD\", \"MYOG\", \"MYL1\", \"MYHC\"] # Add 4 new genes\n",
+    "gene_sequence_new.extend(new_genes)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of genes after extension: 28\n",
+      "Total number of genes before extension: 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count the number of genes\n",
+    "gene_sequence_after_extend = len(gene_sequence_new) # Use len() to count the total number of genes\n",
+    "\n",
+    "print(f\"Total number of genes after extension: {gene_sequence_after_extend}\")  \n",
+    "print(f\"Total number of genes before extension: {num_genes}\") "
+   ]
   },
   {
    "cell_type": "code",
