--- a/day06/Assignment06.ipynb
+++ b/day06/Assignment06.ipynb
@@ -173,15 +173,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of genes after extension: 28\n",
-      "Total number of genes before extension: 24\n"
+      "Total number of genes before extension: 24\n",
+      "Total number of genes after extension: 28\n"
      ]
     }
    ],
@@ -189,8 +189,8 @@
     "# Count the number of genes\n",
     "gene_sequence_after_extend = len(gene_sequence_new) # Use len() to count the total number of genes\n",
     "\n",
-    "print(f\"Total number of genes after extension: {gene_sequence_after_extend}\")  \n",
-    "print(f\"Total number of genes before extension: {num_genes}\") "
+    "print(f\"Total number of genes before extension: {num_genes}\") \n",
+    "print(f\"Total number of genes after extension: {gene_sequence_after_extend}\")  \n"
    ]
   },
   {
