--- a/day06/Assignment06.ipynb
+++ b/day06/Assignment06.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -163,17 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_genes = [\"MYOD\", \"MYOG\", \"MYL1\", \"MYHC\"] # Add 4 new genes\n",
-    "gene_sequence_new.extend(new_genes)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -186,19 +176,13 @@
     }
    ],
    "source": [
-    "# Count the number of genes\n",
-    "gene_sequence_after_extend = len(gene_sequence_new) # Use len() to count the total number of genes\n",
+    "new_genes = [\"MYOD\", \"MYOG\", \"MYL1\", \"MYHC\"] # Add 4 new genes\n",
     "\n",
-    "print(f\"Total number of genes before extension: {num_genes}\") \n",
-    "print(f\"Total number of genes after extension: {gene_sequence_after_extend}\")  \n"
+    "print(f\"Total number of genes before extension: {len(gene_sequence_new)}\")\n",
+    "\n",
+    "gene_sequence_new.extend(new_genes)\n",
+    "print(f\"Total number of genes after extension: {len(gene_sequence_new)}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
